--- a/css/styles.css
+++ b/css/styles.css
@@ -1,807 +1,20 @@
-:root {
-  --text-color: #757575;
-  --link-color: #2196f3;
-  --title-color: #212121;
-  --main-color: #ffffff;
-  --logo-color: #000000;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-ul,
-ol {
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
-}
-img {
-  display: block;
-}
-body {
-  font-family: "Roboto", sans-serif;
-  color: var(--title-color);
-}
-.list {
-  list-style: none;
-}
-.link {
-  text-decoration: none;
-}
-.container {
-  width: 1200px;
-  margin: 0 auto;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-.visually-hidden {
-  position: absolute !important;
-  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
-  clip: rect(1px, 1px, 1px, 1px);
-  padding: 0 !important;
-  border: 0 !important;
-  height: 1px !important;
-  width: 1px !important;
-  overflow: hidden;
-}
 /*************HEADER**************/
 
-.header-container {
-  display: flex;
-  align-items: center;
-}
-.header {
-  padding: 25px 0;
-  border-bottom: 1px solid #ececec;
-}
-.menu-list {
-  display: flex;
-  align-items: center;
-}
-.menu-item:not(:last-child) {
-  margin-right: 50px;
-}
-.menu-link.current {
-  color: var(--link-color);
-}
-
-.logo-link {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: var(--logo-color);
-  margin-right: 93px;
-}
-.logo-web {
-  color: var(--link-color);
-}
-.menu-link {
-  position: relative;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--title-color);
-
-  transition: color 250ms linear, transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.menu-link.current::after {
-  content: " ";
-  position: absolute;
-  bottom: -33px;
-  display: block;
-  height: 4px;
-  width: 100%;
-  background: #2196F3;
-  border-radius: 2px;
-}
-
-.menu-link:hover,
-.menu-link:focus,
-.contact-link:hover,
-.contact-link:focus,
-.address-link:hover,
-.address-link:focus {
-  color: var(--link-color);
-  fill: var(--link-color);
-}
-.header-contacts-list {
-  margin-left: auto;
-  display: flex;
-  align-items: center;
-}
-.header-icon-mail {
-  width: 16px;
-  height: 12px;
-  margin-right: 10px;
-}
-.header-icon-mobile {
-  width: 10px;
-  height: 16px;
-  margin-right: 10px;
-}
-.contact-link {
-  display: flex;
-  align-items: center;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  fill: var(--text-color);
-  color: var(--text-color);
-  margin-right: 50px;
-
-  transition: color 250ms linear, transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 /***************HERO**************/
 
-.hero {
-  max-width: 1600px;
-  margin: 0 auto;
-  padding: 200px 0;
-  background-position: center;
-  background-size: cover;
-  background-color: #c4c4c4;
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/title.jpg);
-}
-.hero-title {
-  width: 696px;
-  margin: 0 auto 30px;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: var(--main-color);
-}
-.modal-btn {
-  padding: 10px 32px;
-  margin-left: auto;
-  margin-right: auto;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: var(--main-color);
-  background: var(--link-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: none;
-  cursor: pointer;
-  font-family: inherit;
-}
 /***********FEATURES***********/
 
-.features-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: -30px;
-  margin-left: -30px;
-}
-.features-icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 120px;
-  background: #f5f4fa;
-  border-radius: 4px;
-  margin-bottom: 30px;
-}
-.features-icon-list {
-  width: 70px;
-  height: 70px;
-}
-.features-item {
-  width: 270px;
-  flex-wrap: calc((100% - 120px) / 4);
-  margin-top: 30px;
-  margin-left: 30px;
-}
-.features-title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  margin-bottom: 10px;
-  text-transform: uppercase;
-}
-.features-desc {
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--text-color);
-}
-.section-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: -30px;
-  margin-left: -30px;
-}
-.section-item {
-  width: 370px;
-  flex-wrap: calc((100% - 90px) / 3);
-  margin-top: 30px;
-  margin-left: 30px;
-}
-.title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
-  margin-bottom: 50px;
-}
+/*About*/
+
 /**********TEAM**********/
-
-.team-section {
-  background: #f5f4fa;
-}
-.section-team {
-  padding-top: 0;
-}
-.section-team-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: -30px;
-  margin-left: -30px;
-}
-.section-team-item {
-  width: 270px;
-  flex-wrap: calc((100% - 120px) / 4);
-  margin-top: 30px;
-  margin-left: 30px;
-  background: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-.section-team-name {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.18;
-  text-align: center;
-  letter-spacing: 0.03em;
-  margin-bottom: 10px;
-}
-.section-team-position {
-  font-size: 16px;
-  line-height: 1.18;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--text-color);
-}
-
-.section-thumb {
-  position: relative;
-}
- 
-.section-label {
-  position: absolute;
-  top: 224px;
-  margin: 0;
-  padding: 27px 80px;
-  width: 100%;
-  background: rgba(47, 48, 58, 0.8);
-
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.42;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-
-  color: var(--main-color);
-
-}
-
-.team-text {
-  padding-top: 30px;
-}
-.team-list {
-  display: flex;
-  justify-content: space-between;
-  margin: 16px 32px 30px 32px;
-}
-.team-link-icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-color: white;
-  fill: #afb1b8;
-
-  transition: background-color 250ms linear, transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.team-social-icon {
-  width: 20px;
-  height: 20px;
-}
-.team-link-icon:hover,
-.team-link-icon:focus {
-  fill: var(--main-color);
-  background-color: var(--link-color);
-}
 
 /*************CUSTOMER*************/
 
-.customer-list {
-  display: flex;
-  justify-content: space-between;
-}
-.customer-item {
-  margin-right: 30px;
-}
-.customer-item:last-child {
-  margin-right: 0;
-}
-.customer-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 170px;
-  height: 92px;
-  border: 1px solid #afb1b8;
-  box-sizing: border-box;
-  border-radius: 4px;
-  fill: #afb1b8;
-
-  transition: border-color 250ms linear, transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.customer-link:hover,
-.customer-link:focus {
-  fill: var(--link-color);
-  border-color: var(--link-color);
-}
-
 /**********FOOTER**********/
 
-.footer-container {
-  padding: 60px 0;
-  background: #2f303a;
-}
-.footer-box {
-  display: flex;
-  align-items: center;
-}
-.footer-logo-link {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 31px;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-  margin-top: 60px;
-}
-.footer-address {
-  font-size: 14px;
-  font-style: normal;
-  margin-top: 20px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--main-color);
-}
-.address-link {
-  color: rgba(255, 255, 255, 0.6);
-
-  transition: color 250ms linear, transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer-address-item {
-  margin-bottom: 9px;
-  color: var(--main-color);
-}
-.footer-address-item:last-child {
-  margin-bottom: 0;
-}
-.social {
-  margin-left: 70px;
-}
-.social-title {
-  font-family: Roboto;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-  color: var(--main-color);
-}
-.social-list {
-  display: flex;
-}
-.social-item {
-  margin-right: 10px;
-}
-.social-item:last-child {
-  margin-right: 0;
-}
-.social-link-icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background: rgba(255, 255, 255, 0.1);
-  fill: var(--main-color);
-
-  transition: background-color 250ms linear, transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.social-icon {
-  width: 20px;
-  height: 20px;
-}
-.social-link-icon:hover,
-.social-link-icon:focus {
-  background-color: var(--link-color);
-}
-
-.form-box {
-  margin-left: 93px;
-}
-.form-box-mail {
-  display: flex;
-  align-items: baseline;
-}
-
-.footer-form-input {
-  width: 358px;
-  height: 50px;
-  margin-right: 12px;
-  color: var(--main-color);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-sizing: border-box;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  background: #2F303A;
-}
-.modal-footer-btn {
-  width: 200px;
-  height: 50px;
-  background: var(--link-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  padding-left: 29px;
-  margin-left: auto;
-  margin-right: auto;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: var(--main-color);
-  border: none;
-  cursor: pointer;
-  font-family: inherit;
-}
-
-.form-icon {
-  width: 24px;
-  height: 24px;
-  margin-left: 10px;
-}
-
-.footer-form-input::placeholder {
-  padding: 15px 16px;
-  color: rgba(255, 255, 255, 0.6);
-}
 /**************ПОРТФОЛИО****************/
 /**************FILTER*******************/
-.filter-btn {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  text-align: center;
-  letter-spacing: 0.03em;
-  cursor: pointer;
-  font-family: inherit;
-  text-align: center;
-
-  border-radius: 4px;
-  border: none;
-  background: #f5f4fa;
-  padding: 6px 22px;
-
-  transition: background-color 250ms linear, transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: box-shadow 250ms linear, transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.filter-btn:hover,
-.filter-btn:focus {
-  color: var(--main-color);
-  background: var(--link-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-.filter-list {
-  margin: 0 auto 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.filter-item:not(:last-child) {
-  margin-right: 8px;
-}
 
 /*************PORTFOLIO*************/
 
-.portfolio-title {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  color: var(--title-color);
-}
-.portfolio-txt {
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.03em;
-  color: var(--text-color);
-}
-.portfolio-card-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: -30px;
-  margin-left: -30px;
-}
-.portfolio-card {
-  width: 370px;
-  flex-wrap: calc((100% - 90px) / 3);
-  margin-top: 30px;
-  margin-left: 30px;
-
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio-link {
-  display: block;
-}
-.portfolio-overlay {
-  position: relative;
-  overflow: hidden;
-}
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.55;
-  padding: 63px 24px;
-  letter-spacing: 0.03em;
-  color: var(--main-color);
-  background: var(--link-color);
-
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-}
-
-.portfolio-link:hover .overlay,
-.portfolio-link:focus .overlay {
-  transform: translateY(0);
-}
-.portfolio-card:hover,
-.portfolio-card:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-.portfolio-text {
-  display: block
-  border-bottom: 1px solid #eeeeee;
-  border-left: 1px solid #eeeeee;
-  border-right: 1px solid #eeeeee;
-  padding: 20px 24px;
-}
-
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.2);
-
-  transition: opacity 250ms linear, scale (1.25);
-}
-.modal {
-  position: absolute;
-  width: 528px;
-  height: 581px;
-  left: 50%;
-  top: 50%;
-  background: #FFFFFF;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  padding: 40px;
-
-  transform: translate(-50%, -50%);
-}
-.close-btn {
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  width: 30px;
-  height: 30px;
-  background: #FFFFFF;
-  border-radius: 50%;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  cursor: pointer;
-  padding: 0;
-}
-.backdrop-icon {
-  width: 11px;
-  height: 11px;
-  fill: #000000;
-
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.backdrop-icon:hover {
-  fill: var(--link-color);
-}
-
-.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
-
-.modal-form {
-  display: flex;
-  flex-direction: column;
-}
-.modal-form-icon {
-  position: absolute;
-  top: 50%;
-  left: 14px;
-  width: 13px;
-  height: 13px;
-  display: block;
-  transform: translateY(-50%);
-}
-.modal-form-input {
-  width: 100%;
-  height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  padding-left: 42px;
-
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-form-input:focus {
-  outline: none;
-  border-color: var(--link-color);
-}
-.modal-form-input:focus+.modal-form-icon {
-  fill: var(--link-color);
-}
-.modal-form-title {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--title-color);
-  margin-bottom: 12px;
-}
-
-.modal-form-label {
-  display: block;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-  color: var(--text-color);
-  margin-bottom: 10px;
-}
-.modal-form-box {
-  display: block;
-  position: relative;
-  margin-top: 4px;
-}
-.modal-feedback {
-  width: 100%;
-  height: 120px;
-  margin-top: 4px;
-  padding-top: 12px;
-  padding-left: 16px;
-  resize: none;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  font-style: inherit;
-
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-feedback:focus {
-  outline: none;
-  border-color: var(--link-color);
-}
-.modal-feedback::placeholder {
-  color: rgba(117, 117, 117, 0.5);
-}
-
-.modal-form-checkbox-label::before {
-  display: block;
-  content: "";
-  width: 16px;
-  height: 15px;
-  border: 2px solid #212121;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-right: 9px;
-}
-
-.modal-form-checkbox-label {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--text-color);
-  margin-top: 20px;
-  margin-bottom: 30px;
-  margin-right: 9px;
-
-}
-.modal-form-btn {
-  width: 200px;
-  height: 50px;
-  background: #188CE8;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  padding: 10px 55px;
-  margin-left: auto;
-  margin-right: auto;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: var(--main-color);
-  border: none;
-  cursor: pointer;
-  font-family: inherit;
-}
-.modal-form-link {
-  text-decoration-skip-ink: none;
-  color: var(--link-color);
-}
-.modal-form-checkbox:checked + .modal-form-checkbox-label::before {
-  background: var(--link-color);
-  border-radius: 2px;
-  border: none;
-  background-image: url(../images/check.svg);
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-
-
-
+/*MODAL*/
