--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,18 @@
   --logo-color: #000000;
 }
 
+.visually-hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
+
 h1,
 h2,
 h3,
@@ -53,18 +65,6 @@ body {
   padding-right: 15px;
 }
 
-.visually-hidden {
-  position: absolute !important;
-  clip: rect(1px 1px 1px 1px);
-  /* IE6, IE7 */
-  clip: rect(1px, 1px, 1px, 1px);
-  padding: 0 !important;
-  border: 0 !important;
-  height: 1px !important;
-  width: 1px !important;
-  overflow: hidden;
-}
-
 .logo-link {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -73,16 +73,16 @@ body {
   letter-spacing: 0.03em;
 }
 
-.header-logo {
+.logo-link-web {
+  color: var(--link-color);
+}
+
+.logo-link .header-logo-link {
   color: var(--logo-color);
   margin-right: 93px;
 }
 
-.logo-web {
-  color: var(--link-color);
-}
-
-.footer-logo {
+.logo-link .footer-logo-link {
   color: #ffffff;
   margin-top: 60px;
 }
@@ -98,10 +98,9 @@ body {
   fill: #afb1b8;
 }
 
-.team-link-icon:hover,
-.team-link-icon:focus {
-  fill: var(--main-color);
+.team-icon:hover, .team-icon:focus {
   background-color: var(--link-color);
+  fill: var(--main-color);
 }
 
 .social-link-icon {
@@ -112,6 +111,10 @@ body {
   height: 44px;
   border-radius: 50%;
   transition: background-color 250ms linear, transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-link-icon:hover, .social-link-icon:focus {
+  background-color: var(--link-color);
 }
 
 .social-list {
@@ -136,11 +139,6 @@ body {
   height: 20px;
 }
 
-.social-link-icon:hover,
-.social-link-icon:focus {
-  background-color: var(--link-color);
-}
-
 .title {
   font-weight: 700;
   font-size: 36px;
@@ -150,9 +148,197 @@ body {
   margin-bottom: 50px;
 }
 
-.header-container {
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms linear, scale 1.25;
+}
+
+.modal {
+  position: absolute;
+  width: 528px;
+  height: 581px;
+  left: 50%;
+  top: 50%;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  padding: 40px;
+  transform: translate(-50%, -50%);
+}
+
+.close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background: #ffffff;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  padding: 0;
+}
+
+.backdrop-icon {
+  width: 11px;
+  height: 11px;
+  fill: #000000;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop-icon:hover {
+  fill: var(--link-color);
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-form-icon {
+  position: absolute;
+  top: 50%;
+  left: 14px;
+  width: 13px;
+  height: 13px;
+  display: block;
+  transform: translateY(-50%);
+}
+
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 42px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:focus {
+  outline: none;
+  border-color: var(--link-color);
+}
+
+.modal-form-input:focus + .modal-form-icon {
+  fill: var(--link-color);
+}
+
+.modal-form-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-color);
+  margin-bottom: 12px;
+}
+
+.modal-form-label {
+  display: block;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--text-color);
+  margin-bottom: 10px;
+}
+
+.modal-form-box {
+  display: block;
+  position: relative;
+  margin-top: 4px;
+}
+
+.modal-form-btn {
+  width: 200px;
+  height: 50px;
+  background: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  padding: 10px 55px;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
   display: flex;
   align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--main-color);
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
+}
+
+.modal-form-link {
+  text-decoration-skip-ink: none;
+  color: var(--link-color);
+}
+
+.modal-form-checkbox-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--text-color);
+  margin-top: 20px;
+  margin-bottom: 30px;
+  margin-right: 9px;
+}
+
+.modal-form-checkbox-label::before {
+  display: block;
+  content: "";
+  width: 16px;
+  height: 15px;
+  border: 2px solid #212121;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-right: 9px;
+}
+
+.modal-form-checkbox:checked + .modal-form-checkbox-label::before {
+  background: var(--link-color);
+  border-radius: 2px;
+  border: none;
+  background-image: url(../images/check.svg);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.modal-feedback {
+  width: 100%;
+  height: 120px;
+  margin-top: 4px;
+  padding-top: 12px;
+  padding-left: 16px;
+  resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  font-style: inherit;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-feedback:focus {
+  outline: none;
+  border-color: var(--link-color);
+}
+
+.modal-feedback::placeholder {
+  color: rgba(117, 117, 117, 0.5);
 }
 
 .header {
@@ -160,48 +346,9 @@ body {
   border-bottom: 1px solid #ececec;
 }
 
-.menu-list {
+.header-container {
   display: flex;
   align-items: center;
-}
-
-.menu-item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.menu-link.current {
-  color: var(--link-color);
-}
-
-.menu-link {
-  position: relative;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--title-color);
-  transition: color 250ms linear, transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.menu-link.current::after {
-  content: " ";
-  position: absolute;
-  bottom: -33px;
-  display: block;
-  height: 4px;
-  width: 100%;
-  background: #2196f3;
-  border-radius: 2px;
-}
-
-.menu-link:hover,
-.menu-link:focus,
-.contact-link:hover,
-.contact-link:focus,
-.address-link:hover,
-.address-link:focus {
-  color: var(--link-color);
-  fill: var(--link-color);
 }
 
 .header-contacts-list {
@@ -222,6 +369,45 @@ body {
   margin-right: 10px;
 }
 
+.menu-list {
+  display: flex;
+  align-items: center;
+}
+
+.menu-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.menu-link {
+  position: relative;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--title-color);
+  transition: color 250ms linear, transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-link.current {
+  color: var(--link-color);
+}
+
+.menu-link.current::after {
+  content: " ";
+  position: absolute;
+  bottom: -33px;
+  display: block;
+  height: 4px;
+  width: 100%;
+  background: #2196f3;
+  border-radius: 2px;
+}
+
+.menu-link:hover, .menu-link:focus {
+  color: var(--link-color);
+  fill: var(--link-color);
+}
+
 .contact-link {
   display: flex;
   align-items: center;
@@ -233,6 +419,11 @@ body {
   color: var(--text-color);
   margin-right: 50px;
   transition: color 250ms linear, transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-link:hover, .contact-link:focus {
+  color: var(--link-color);
+  fill: var(--link-color);
 }
 
 .hero {
@@ -336,12 +527,12 @@ body {
   margin-left: 30px;
 }
 
-.team-section {
-  background: #f5f4fa;
+.section-about {
+  padding-top: 0;
 }
 
 .section-team {
-  padding-top: 0;
+  background: #f5f4fa;
 }
 
 .section-team-list {
@@ -428,8 +619,7 @@ body {
   transition: border-color 250ms linear, transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.customer-link:hover,
-.customer-link:focus {
+.customer-link:hover, .customer-link:focus {
   fill: var(--link-color);
   border-color: var(--link-color);
 }
@@ -444,6 +634,16 @@ body {
   align-items: center;
 }
 
+.address-link {
+  color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms linear, transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.address-link:hover, .address-link:focus {
+  color: var(--link-color);
+  fill: var(--link-color);
+}
+
 .footer-address {
   font-size: 14px;
   font-style: normal;
@@ -451,11 +651,6 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--main-color);
-}
-
-.address-link {
-  color: rgba(255, 255, 255, 0.6);
-  transition: color 250ms linear, transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-address-item {
@@ -491,16 +686,10 @@ body {
   align-items: baseline;
 }
 
-.footer-form-input {
-  width: 358px;
-  height: 50px;
-  margin-right: 12px;
-  color: var(--main-color);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-sizing: border-box;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  background: #2f303a;
+.form-icon {
+  width: 24px;
+  height: 24px;
+  margin-left: 10px;
 }
 
 .modal-footer-btn {
@@ -525,14 +714,128 @@ body {
   font-family: inherit;
 }
 
-.form-icon {
-  width: 24px;
-  height: 24px;
-  margin-left: 10px;
+.footer-form-input {
+  width: 358px;
+  height: 50px;
+  margin-right: 12px;
+  color: var(--main-color);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background: #2f303a;
 }
 
 .footer-form-input::placeholder {
   padding: 15px 16px;
   color: rgba(255, 255, 255, 0.6);
+}
+
+.filter-btn {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  font-family: inherit;
+  text-align: center;
+  border-radius: 4px;
+  border: none;
+  background: #f5f4fa;
+  padding: 6px 22px;
+  transition: background-color 250ms linear, transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms linear, transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.filter-btn:hover, .filter-btn:focus {
+  color: var(--main-color);
+  background: var(--link-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.filter-list {
+  margin: 0 auto 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.filter-item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.portfolio-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--title-color);
+}
+
+.portfolio-txt {
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  color: var(--text-color);
+}
+
+.portfolio-text {
+  display: block;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  padding: 20px 24px;
+}
+
+.portfolio-card {
+  width: 370px;
+  flex-wrap: calc((100% - 90px) / 3);
+  margin-top: 30px;
+  margin-left: 30px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-card-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: -30px;
+  margin-left: -30px;
+}
+
+.portfolio-card:hover, .portfolio-card:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.portfolio-link {
+  display: block;
+}
+
+.portfolio-link:hover .overlay,
+.portfolio-link:focus .overlay {
+  transform: translateY(0);
+}
+
+.portfolio-overlay {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.55;
+  padding: 63px 24px;
+  letter-spacing: 0.03em;
+  color: var(--main-color);
+  background: var(--link-color);
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*# sourceMappingURL=main.css.map */
