--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -4,15 +4,16 @@
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-}
-.header-logo {
-  color: var(--logo-color);
-  margin-right: 93px;
-}
-.logo-web {
-  color: var(--link-color);
-}
-.footer-logo {
-  color: #ffffff;
-  margin-top: 60px;
+
+  &-web {
+    color: var(--link-color);
+  }
+  .header-logo-link {
+    color: var(--logo-color);
+    margin-right: 93px;
+  }
+  .footer-logo-link {
+    color: #ffffff;
+    margin-top: 60px;
+  }
 }
