--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -1,53 +1,112 @@
 .modal-form {
   display: flex;
   flex-direction: column;
-}
-.modal-form-icon {
-  position: absolute;
-  top: 50%;
-  left: 14px;
-  width: 13px;
-  height: 13px;
-  display: block;
-  transform: translateY(-50%);
-}
-.modal-form-input {
-  width: 100%;
-  height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  padding-left: 42px;
 
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &-icon {
+    position: absolute;
+    top: 50%;
+    left: 14px;
+    width: 13px;
+    height: 13px;
+    display: block;
+    transform: translateY(-50%);
+  }
+
+  &-input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding-left: 42px;
+
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  &-input:focus {
+    outline: none;
+    border-color: var(--link-color);
+  }
+  &-input:focus + &-icon {
+    fill: var(--link-color);
+  }
+
+  &-title {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--title-color);
+    margin-bottom: 12px;
+  }
+  &-label {
+    display: block;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: var(--text-color);
+    margin-bottom: 10px;
+  }
+  &-box {
+    display: block;
+    position: relative;
+    margin-top: 4px;
+  }
+  &-btn {
+    width: 200px;
+    height: 50px;
+    background: #188ce8;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    padding: 10px 55px;
+    margin-left: auto;
+    margin-right: auto;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: var(--main-color);
+    border: none;
+    cursor: pointer;
+    font-family: inherit;
+  }
+  &-link {
+    text-decoration-skip-ink: none;
+    color: var(--link-color);
+  }
 }
-.modal-form-input:focus {
-  outline: none;
-  border-color: var(--link-color);
-}
-.modal-form-input:focus + .modal-form-icon {
-  fill: var(--link-color);
-}
-.modal-form-title {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
+.modal-form-checkbox-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  line-height: 1.71;
   letter-spacing: 0.03em;
-  color: var(--title-color);
-  margin-bottom: 12px;
-}
-.modal-form-label {
-  display: block;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
   color: var(--text-color);
-  margin-bottom: 10px;
-}
-.modal-form-box {
-  display: block;
-  position: relative;
-  margin-top: 4px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  margin-right: 9px;
+
+  &::before {
+    display: block;
+    content: "";
+    width: 16px;
+    height: 15px;
+    border: 2px solid #212121;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-right: 9px;
+  }
+  .modal-form-checkbox:checked + &::before {
+    background: var(--link-color);
+    border-radius: 2px;
+    border: none;
+    background-image: url(../images/check.svg);
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
 }
 .modal-feedback {
   width: 100%;
@@ -61,67 +120,12 @@
   font-style: inherit;
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-feedback:focus {
-  outline: none;
-  border-color: var(--link-color);
-}
-.modal-feedback::placeholder {
-  color: rgba(117, 117, 117, 0.5);
-}
 
-.modal-form-btn {
-  width: 200px;
-  height: 50px;
-  background: #188ce8;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  padding: 10px 55px;
-  margin-left: auto;
-  margin-right: auto;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: var(--main-color);
-  border: none;
-  cursor: pointer;
-  font-family: inherit;
-}
-.modal-form-link {
-  text-decoration-skip-ink: none;
-  color: var(--link-color);
-}
-.modal-form-checkbox-label {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--text-color);
-  margin-top: 20px;
-  margin-bottom: 30px;
-  margin-right: 9px;
-}
-.modal-form-checkbox-label::before {
-  display: block;
-  content: "";
-  width: 16px;
-  height: 15px;
-  border: 2px solid #212121;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-right: 9px;
-}
-.modal-form-checkbox:checked + .modal-form-checkbox-label::before {
-  background: var(--link-color);
-  border-radius: 2px;
-  border: none;
-  background-image: url(../images/check.svg);
-  background-repeat: no-repeat;
-  background-position: center center;
+  &:focus {
+    outline: none;
+    border-color: var(--link-color);
+  }
+  &::placeholder {
+    color: rgba(117, 117, 117, 0.5);
+  }
 }
