--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -30,11 +30,12 @@
   fill: #000000;
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover {
+    fill: var(--link-color);
+  }
 }
 
-.backdrop-icon:hover {
-  fill: var(--link-color);
-}
 .is-hidden {
   opacity: 0;
   visibility: hidden;
