--- a/sass/components/_social-list.scss
+++ b/sass/components/_social-list.scss
@@ -6,12 +6,14 @@
 .team-icon {
   background-color: white;
   fill: #afb1b8;
+
+  &:hover,
+  &:focus {
+    background-color: var(--link-color);
+    fill: var(--main-color);
+  }
 }
-.team-link-icon:hover,
-.team-link-icon:focus {
-  fill: var(--main-color);
-  background-color: var(--link-color);
-}
+
 .social-link-icon {
   display: flex;
   align-items: center;
@@ -22,16 +24,23 @@
 
   transition: background-color 250ms linear,
     transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: var(--link-color);
+  }
 }
 .social-list {
   display: flex;
 }
 .social-item {
   margin-right: 10px;
+
+  &:last-child {
+    margin-right: 0;
+  }
 }
-.social-item:last-child {
-  margin-right: 0;
-}
+
 .footer-icon {
   background: rgba(255, 255, 255, 0.1);
   fill: var(--main-color);
@@ -39,8 +48,4 @@
 .social-icon {
   width: 20px;
   height: 20px;
-}
-.social-link-icon:hover,
-.social-link-icon:focus {
-  background-color: var(--link-color);
 }
