--- a/sass/layout/_customer.scss
+++ b/sass/layout/_customer.scss
@@ -4,10 +4,12 @@
 }
 .customer-item {
   margin-right: 30px;
+
+  &:last-child {
+    margin-right: 0;
+  }
 }
-.customer-item:last-child {
-  margin-right: 0;
-}
+
 .customer-link {
   display: flex;
   align-items: center;
@@ -21,9 +23,10 @@
 
   transition: border-color 250ms linear,
     transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.customer-link:hover,
-.customer-link:focus {
-  fill: var(--link-color);
-  border-color: var(--link-color);
+
+  &:hover,
+  &:focus {
+    fill: var(--link-color);
+    border-color: var(--link-color);
+  }
 }
