--- a/sass/layout/_filter.scss
+++ b/sass/layout/_filter.scss
@@ -17,14 +17,16 @@
     transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms linear,
     transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: var(--main-color);
+    background: var(--link-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
-.filter-btn:hover,
-.filter-btn:focus {
-  color: var(--main-color);
-  background: var(--link-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
+
 .filter-list {
   margin: 0 auto 50px;
   display: flex;
