--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,20 +1,35 @@
-.header-container {
-  display: flex;
-  align-items: center;
-}
 .header {
   padding: 25px 0;
   border-bottom: 1px solid #ececec;
+
+  &-container {
+    display: flex;
+    align-items: center;
+  }
+  &-contacts-list {
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+  }
+  &-icon-mail {
+    width: 16px;
+    height: 12px;
+    margin-right: 10px;
+  }
+  &-icon-mobile {
+    width: 10px;
+    height: 16px;
+    margin-right: 10px;
+  }
 }
-.menu-list {
-  display: flex;
-  align-items: center;
-}
-.menu-item:not(:last-child) {
-  margin-right: 50px;
-}
-.menu-link.current {
-  color: var(--link-color);
+.menu {
+  &-list {
+    display: flex;
+    align-items: center;
+  }
+  &-item:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 
 .menu-link {
@@ -26,43 +41,27 @@
   color: var(--title-color);
 
   transition: color 250ms linear, transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &.current {
+    color: var(--link-color);
+  }
+  &.current::after {
+    content: " ";
+    position: absolute;
+    bottom: -33px;
+    display: block;
+    height: 4px;
+    width: 100%;
+    background: #2196f3;
+    border-radius: 2px;
+  }
+  &:hover,
+  &:focus {
+    color: var(--link-color);
+    fill: var(--link-color);
+  }
 }
 
-.menu-link.current::after {
-  content: " ";
-  position: absolute;
-  bottom: -33px;
-  display: block;
-  height: 4px;
-  width: 100%;
-  background: #2196f3;
-  border-radius: 2px;
-}
-
-.menu-link:hover,
-.menu-link:focus,
-.contact-link:hover,
-.contact-link:focus,
-.address-link:hover,
-.address-link:focus {
-  color: var(--link-color);
-  fill: var(--link-color);
-}
-.header-contacts-list {
-  margin-left: auto;
-  display: flex;
-  align-items: center;
-}
-.header-icon-mail {
-  width: 16px;
-  height: 12px;
-  margin-right: 10px;
-}
-.header-icon-mobile {
-  width: 10px;
-  height: 16px;
-  margin-right: 10px;
-}
 .contact-link {
   display: flex;
   align-items: center;
@@ -75,4 +74,10 @@
   margin-right: 50px;
 
   transition: color 250ms linear, transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: var(--link-color);
+    fill: var(--link-color);
+  }
 }
