--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -10,18 +10,20 @@
       rgba(47, 48, 58, 0.4)
     ),
     url(../images/title.jpg);
+
+  &-title {
+    width: 696px;
+    margin: 0 auto 30px;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: var(--main-color);
+  }
 }
-.hero-title {
-  width: 696px;
-  margin: 0 auto 30px;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: var(--main-color);
-}
+
 .modal-btn {
   padding: 10px 32px;
   margin-left: auto;
