--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,18 +1,18 @@
 .portfolio {
-  &-title {
+  &__title {
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
     color: var(--title-color);
   }
-  &-txt {
+  &__txt {
     font-size: 16px;
     line-height: 1.87;
     letter-spacing: 0.03em;
     color: var(--text-color);
   }
-  &-text {
+  &__text {
     display: block;
     border-bottom: 1px solid #eeeeee;
     border-left: 1px solid #eeeeee;
@@ -20,7 +20,7 @@
     padding: 20px 24px;
   }
 }
-.portfolio-card {
+.portfolio__card {
   width: 370px;
   flex-wrap: calc((100% - 90px) / 3);
   margin-top: 30px;
@@ -28,19 +28,19 @@
 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &-list {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: -30px;
-    margin-left: -30px;
-  }
   &:hover,
   &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
 }
-.portfolio-link {
+.portfolio__list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: -30px;
+  margin-left: -30px;
+}
+.portfolio__link {
   display: block;
 
   &:hover .overlay,
@@ -48,7 +48,7 @@
     transform: translateY(0);
   }
 }
-.portfolio-overlay {
+.portfolio__overlay {
   position: relative;
   overflow: hidden;
 }
