--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,19 +1,18 @@
-.logo-link {
+.logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-
-  &-web {
-    color: var(--link-color);
-  }
-  .header-logo-link {
-    color: var(--logo-color);
-    margin-right: 93px;
-  }
-  .footer-logo-link {
-    color: #ffffff;
-    margin-top: 60px;
-  }
+}
+.logo__web {
+  color: var(--link-color);
+}
+.header__logo {
+  color: var(--logo-color);
+  margin-right: 93px;
+}
+.footer__logo {
+  color: #ffffff;
+  margin-top: 60px;
 }
