--- a/sass/layout/_filter.scss
+++ b/sass/layout/_filter.scss
@@ -1,4 +1,4 @@
-.filter-btn {
+.filter-button {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -27,12 +27,12 @@
   }
 }
 
-.filter-list {
+.filter__list {
   margin: 0 auto 50px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.filter-item:not(:last-child) {
+.filter__item:not(:last-child) {
   margin-right: 8px;
 }
