--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -7,9 +7,12 @@
     display: flex;
     align-items: center;
   }
+  &-icon {
+    background: rgba(255, 255, 255, 0.1);
+    fill: var(--main-color);
+  }
 }
-
-.address-link {
+.address__link {
   color: rgba(255, 255, 255, 0.6);
 
   transition: color 250ms linear, transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -20,7 +23,7 @@
     fill: var(--link-color);
   }
 }
-.footer-address {
+.address {
   font-size: 14px;
   font-style: normal;
   margin-top: 20px;
@@ -28,11 +31,11 @@
   letter-spacing: 0.03em;
   color: var(--main-color);
 
-  &-item {
+  &__item {
     margin-bottom: 9px;
     color: var(--main-color);
   }
-  &-item:last-child {
+  &__item:last-child {
     margin-bottom: 0;
   }
 }
@@ -40,7 +43,7 @@
 .social {
   margin-left: 70px;
 
-  &-title {
+  &__title {
     font-family: Roboto;
     font-weight: 700;
     font-size: 14px;
@@ -51,21 +54,15 @@
     color: var(--main-color);
   }
 }
-.form {
-  &-box {
-    margin-left: 93px;
-  }
-  &-box-mail {
+.footer__form {
+  margin-left: 93px;
+
+  &-mail {
     display: flex;
     align-items: baseline;
   }
-  &-icon {
-    width: 24px;
-    height: 24px;
-    margin-left: 10px;
-  }
 }
-.modal-footer-btn {
+.footer-button {
   width: 200px;
   height: 50px;
   background: var(--link-color);
@@ -86,8 +83,7 @@
   cursor: pointer;
   font-family: inherit;
 }
-
-.footer-form-input {
+.footer__input {
   width: 358px;
   height: 50px;
   margin-right: 12px;
@@ -102,4 +98,9 @@
     padding: 15px 16px;
     color: rgba(255, 255, 255, 0.6);
   }
+}
+.form__icon {
+  width: 24px;
+  height: 24px;
+  margin-left: 10px;
 }
