--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -11,7 +11,7 @@
     ),
     url(../images/title.jpg);
 
-  &-title {
+  &__title {
     width: 696px;
     margin: 0 auto 30px;
     font-weight: 900;
@@ -24,7 +24,7 @@
   }
 }
 
-.modal-btn {
+.hero__button {
   padding: 10px 32px;
   margin-left: auto;
   margin-right: auto;
